Added PrimeNg Carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="content" role="main">
 
   <app-user-content [title]="title">
-
+    <app-custom-carousel></app-custom-carousel>
   </app-user-content>
 
 
