--- a/src/app/modules/user-content/user-content.component.scss
+++ b/src/app/modules/user-content/user-content.component.scss
@@ -10,6 +10,7 @@
       justify-content: center;
       align-items: center;
       margin: auto;
+      padding: 20px;
       min-width: 320px;
       background: ghostwhite;
       border-radius: 4px;
@@ -25,7 +26,7 @@
     }
 
     &__container {
-
+      width: 100%;
     }
   }
 
