--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,6 @@ a:hover {
 @media screen and (max-width: 575px) {
 
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
