--- a/src/app/modules/custom-carousel/custom-carousel-slide/custom-carousel-slide.component.scss
+++ b/src/app/modules/custom-carousel/custom-carousel-slide/custom-carousel-slide.component.scss
@@ -6,41 +6,62 @@
   height: 100%;
   overflow: visible;
 
+  $itemColor: white;
+  $selectedColor: #e67300;
 
+  .back-overlay {
+    height: 100%;
+    background: $selectedColor;
+  }
 
   .custom-carousel-item {
     position: absolute;
     display: flex;
     flex-direction: column;
     width: 100%;
-    //height: calc(100% + 16px);
     height: 100%;
     bottom: 0;
     z-index: 10;
-    border: 1px solid transparent;
-    color: gray;
+    border: 0.5px solid $itemColor;
+    background: $itemColor;
+    color: rgba(0,0,0,0.7);
 
     &:hover {
-      background: rgba(0, 0, 0, 0.05);
+      background: whitesmoke;
       cursor: pointer;
     }
+
     &.selected {
-      border-color: lightgray;
-      background: white;
+      border-color: gray;
+      border-bottom: none;
+      background: $itemColor;
+      transform: translateY(-4px);
+      transition: transform 255ms ease-out;
       &:hover {
-        background: white;
+        background: $itemColor;
       }
+
+      .custom-carousel-item {
+        border: 0.5px solid darkgray;
+
+        &__title {
+          font-size: 14px;
+          font-weight: 600;
+        }
+
+        &__client{
+          color: $selectedColor;
+        }
+      }
+
     }
 
-    &.wasShown {
-
-    }
 
     &__title {
       text-align: center;
       padding: 4px;
       margin-bottom: auto;
-      font-size: 16px;
+      font-size: 13px;
       font-weight: normal;
     }
 
@@ -57,6 +78,10 @@
   img {
     width: 16px;
     height: 16px;
+  }
+
+  .dots {
+    padding: 0 3px;
   }
 }
 
