--- a/src/app/modules/custom-carousel/custom-carousel.component.html
+++ b/src/app/modules/custom-carousel/custom-carousel.component.html
@@ -1,12 +1,22 @@
 <p-carousel [value]="portfolios" [numVisible]="5">
   <ng-template let-portfolio pTemplate="item">
 
-    <app-custom-carousel-slide [item]="portfolio"></app-custom-carousel-slide>
+    <app-custom-carousel-slide
+      ngClass="{selected: selectedPortfolio === portfolio}"
+      [item]="portfolio"
+      (click)="onSelect(portfolio)"
+    ></app-custom-carousel-slide>
 
   </ng-template>
 </p-carousel>
 
-<div class="portfolio-contant">
-Portfolio Content
-</div>
+<ng-container *ngIf="selectedPortfolio">
+  <div class="portfolio-content" *ngIf="selectedPortfolio.content; else noContent">
+    {{ selectedPortfolio.content }}
+  </div>
+  <ng-template #noContent>
+    <span class="no-content">'{{ selectedPortfolio.title }}' portfolio has no content</span>
+  </ng-template>
+</ng-container>
+
 
