--- a/src/app/modules/custom-carousel/custom-carousel.component.scss
+++ b/src/app/modules/custom-carousel/custom-carousel.component.scss
@@ -9,7 +9,7 @@
 
       &-items-content {
         margin: 16px auto;
-        min-height: 60px;
+        min-height: 48px;
         box-shadow:
           0px 4px 7px #DEDEDE,
           inset 0px -1px 6px rgba(166, 166, 166, 0.2);
@@ -51,6 +51,11 @@
     }
   }
 
+
+  .portfolio-content, .no-content {
+    width: 100%;
+    padding: 1em 3.5em;
+  }
 
 
   @media screen and (max-width: 575px) {
