--- a/src/app/modules/custom-carousel/custom-carousel.component.scss
+++ b/src/app/modules/custom-carousel/custom-carousel.component.scss
@@ -11,8 +11,8 @@
         margin: 16px auto;
         min-height: 48px;
         box-shadow:
-          0px 4px 7px #DEDEDE,
-          inset 0px -1px 6px rgba(166, 166, 166, 0.2);
+          -2px 2px 7px #DEDEDE,
+          inset 0px -1px 6px rgba(166, 166, 166, 0.3)
       }
 
       &-items-container {
