Added rxjs interaction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,18 @@
 
     <app-custom-carousel></app-custom-carousel>
 
+
+
+    <ng-container *ngIf="selectedPortfolio">
+      <div class="portfolio-content" *ngIf="selectedPortfolio.content; else noContent">
+        {{ selectedPortfolio.content }}
+      </div>
+      <ng-template #noContent>
+        <span class="no-content">'{{ selectedPortfolio.title }}' portfolio has no content</span>
+      </ng-template>
+    </ng-container>
+
+
   </app-user-content>
 
 
