--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,5 +16,12 @@
     flex-direction: column;
     align-items: center;
   }
+
+
+  .portfolio-content, .no-content {
+    width: 100%;
+    padding: 1em 3.5em;
+  }
+
 }
 
